--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Coming Soon Bootstrap 4 Template Demo</title>
+    <title>Coming Soon</title>
     <meta name="description" content="Demo of A Free Coming Soon Bootstrap 4 Template by TemplateFlip.com."/>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
@@ -18,20 +18,17 @@
         <div class="inner">
           <h3 class="masthead-brand">Coming Soon</h3>
           <nav class="nav nav-masthead">
-            <a class="nav-link nav-social" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-            <a class="nav-link nav-social" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            <a class="nav-link nav-social" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-            <a class="nav-link nav-social" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a class="nav-link nav-social" href="https://www.facebook.com/kunruchcreations"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a class="nav-link nav-social" href="https://twitter.com/kunruch"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           </nav>
         </div>
       </div><br>      <div class="inner cover">
         <h1 class="cover-heading">The adventure Begins</h1>
         <p class="lead cover-copy">Hold tight as we get our working robots together and produce the most astonishing product ever.</p>
-        <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Notify Me</button></p>
       </div>
       <div class="mastfoot">
         <div class="inner">
-          <p>&copy; Your Company. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>.</p>
+          <p>Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>.</p>
         </div>
       </div>
       <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
